# scidoggo

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: python-package.yml
doc/: api.rst  conf.py  index.rst  quick_start.rst  user_guide.rst
examples/: README.txt  plot_pls_decompose.py  plot_tikhonov.py
scidoggo/: __init__.py  _validation.py  exceptions.py
scidoggo/circuit_models/: __init__.py  adapt.py  chromatic.py  chromatic_priors.py  circuit.py  circuit_observation.py  deep.py  gaussian.py  inference.py  interp1d.py  lnl.py  network_generator.py  pyro_components.py  weights.py
scidoggo/circuit_models/model_constructors/: __init__.py  nln_chromatic.py
scidoggo/cross_decomposition/: __init__.py  _pls_base.py  pls.py
scidoggo/deep_implicit_circuits/: __init__.py  implicit_circuit.py  losses.py  weight_dict.py
scidoggo/interpolation/: __init__.py  _rbf_kernels_pythran.py  rbf.py
scidoggo/linear_model/: __init__.py  rank_constrained.py  rank_plus_sparse.py  selectivity.py  tikhonov.py  tikhonov_solver.py
scidoggo/neural/: __init__.py  two_layer.py
scidoggo/resampling/: __init__.py  bootstrap.py
scidoggo/tests/: conftest.py  test_bootstrap.py  test_estimator_conformance.py  test_pls.py  test_rank_constrained.py  test_selectivity.py  test_tikhonov.py
scidoggo/tests/extras/: __init__.py  test_circuit_models.py  test_deep_implicit.py  test_missing_dependency.py  test_neural.py  test_rank_plus_sparse.py
